--- a/dsc650/assignments/assignment09/Assignment 9 - Consumer.ipynb
+++ b/dsc650/assignments/assignment09/Assignment 9 - Consumer.ipynb
@@ -11,10 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -33,14 +31,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap_servers': ['kafka.kafka.svc.cluster.local:9092'],\n",
+       " 'first_name': 'Barbara',\n",
+       " 'last_name': 'Payne',\n",
+       " 'client_id': 'PayneBarbara',\n",
+       " 'topic_prefix': 'PayneBarbara',\n",
+       " 'simple_topic': 'PayneBarbara-simple',\n",
+       " 'joined_topic': 'PayneBarbara-joined',\n",
+       " 'windowed_topic': 'PayneBarbara-windowed'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "config = dict(\n",
     "    bootstrap_servers=['kafka.kafka.svc.cluster.local:9092'],\n",
-    "    first_name='John',\n",
-    "    last_name='Doe'\n",
+    "    first_name='Barbara',\n",
+    "    last_name='Payne'\n",
     ")\n",
     "\n",
     "config['client_id'] = '{}{}'.format(\n",
@@ -68,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'PayneBarbara-joined', 'PayneBarbara-simple', 'PayneBarbara-windowed'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "consumer.subscription()"
    ]
@@ -113,11 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STOPPING MESSAGE CONSUMER\n"
+     ]
+    }
+   ],
    "source": [
     "def print_messages(consumer=consumer):\n",
     "    try:\n",
@@ -156,12 +189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "consumer.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -180,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
