--- a/dsc650/assignments/assignment09/Assignment 9.2.ipynb
+++ b/dsc650/assignments/assignment09/Assignment 9.2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap_servers': ['kafka.kafka.svc.cluster.local:9092'],\n",
+       " 'first_name': 'Barbara',\n",
+       " 'last_name': 'Payne',\n",
+       " 'client_id': 'PayneBarbara',\n",
+       " 'topic_prefix': 'PayneBarbara',\n",
+       " 'locations_topic': 'PayneBarbara-locations',\n",
+       " 'accelerations_topic': 'PayneBarbara-accelerations',\n",
+       " 'windowed_topic': 'PayneBarbara-windowed'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "config = dict(\n",
     "    bootstrap_servers=['kafka.kafka.svc.cluster.local:9092'],\n",
-    "    first_name='John',\n",
-    "    last_name='Doe'\n",
+    "    first_name='Barbara',\n",
+    "    last_name='Payne'\n",
     ")\n",
     "\n",
     "config['client_id'] = '{}{}'.format(\n",
@@ -89,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created topic \"PayneBarbara-windowed\"\n"
+     ]
+    }
+   ],
    "source": [
     "def create_kafka_topic(topic_name, config=config, num_partitions=1, replication_factor=1):\n",
     "    bootstrap_servers = config['bootstrap_servers']\n",
@@ -129,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +172,12 @@
     "  .load()\n",
     "\n",
     "## TODO: Add code to create the df_accelerations dataframe\n",
-    "df_accelerations = ''"
+    "df_accelerations = spark \\\n",
+    "  .readStream \\\n",
+    "  .format(\"kafka\") \\\n",
+    "  .option(\"kafka.bootstrap.servers\", \"kafka.kafka.svc.cluster.local:9092\") \\\n",
+    "  .option(\"subscribe\", config['accelerations_topic']) \\\n",
+    "  .load()"
    ]
   },
   {
@@ -158,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,12 +256,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "windowedSpeeds = ''\n",
+    "df_parsedLocations = df_locations \\\n",
+    "  .select(\n",
+    "    col('timestamp'), \n",
+    "    udf_parse_location(df_locations['value']).alias('json_value')\n",
+    "  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[timestamp: timestamp, ride_id: string, uuid: string, speed: double]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_parsedLocations.select(\n",
+    "    col('timestamp'), \n",
+    "    col('json_value.ride_id').alias('ride_id'),\n",
+    "    col('json_value.uuid').alias('uuid'),\n",
+    "    col('json_value.speed').alias('speed')\n",
+    "  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyspark.sql.group.GroupedData at 0x7fc12a79a4f0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "windowedSpeeds = df_parsedLocations \\\n",
+    "    .withWatermark(\"timestamp\",\"30 seconds\") \\\n",
+    "    .groupBy( window(df_locations.timestamp, \"10 minutes\", \"5 minutes\"),df_locations.timestamp) \n",
+    "\n",
     "windowedSpeeds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_selectedLocations = df_parsedLocations.select(\n",
+    "    col('timestamp'), \n",
+    "    col('json_value.ride_id').alias('ride_id'),\n",
+    "    col('json_value.uuid').alias('uuid'),\n",
+    "    col('json_value.speed').alias('speed')\n",
+    "  )\n",
+    "\n",
+    "df_groupedLocations = df_selectedLocations \\\n",
+    ".withWatermark(\"timestamp\", \"30 seconds\") \\\n",
+    ".groupBy(window(\"timestamp\",\"15 seconds\"),\"speed\",\"ride_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windowedSpeeds = df_groupedLocations.mean().select(\n",
+    "    col(\"ride_id\").alias(\"key\"),\n",
+    "    col(\"avg(speed)\").alias(\"value\")\n",
+    ")"
    ]
   },
   {
@@ -242,11 +355,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "StreamingQueryException",
+     "evalue": "org/apache/spark/sql/internal/connector/SupportsStreamingUpdate\n=== Streaming Query ===\nIdentifier: [id = 885e6c51-8c2e-41d1-978d-894494bebc63, runId = a3bfb129-90ce-45ab-87d2-b5a7928dd506]\nCurrent Committed Offsets: {}\nCurrent Available Offsets: {}\n\nCurrent State: INITIALIZING\nThread State: RUNNABLE",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStreamingQueryException\u001b[0m                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-3530311fe543>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mds_locations_windowed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mawaitTermination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"STOPPING STREAMING DATA\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.8/site-packages/pyspark/sql/streaming.py\u001b[0m in \u001b[0;36mawaitTermination\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m     99\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jsq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mawaitTermination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jsq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mawaitTermination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.8/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1302\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1303\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1304\u001b[0;31m         return_value = get_return_value(\n\u001b[0m\u001b[1;32m   1305\u001b[0m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[1;32m   1306\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.8/site-packages/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    115\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mconverted\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mStreamingQueryException\u001b[0m: org/apache/spark/sql/internal/connector/SupportsStreamingUpdate\n=== Streaming Query ===\nIdentifier: [id = 885e6c51-8c2e-41d1-978d-894494bebc63, runId = a3bfb129-90ce-45ab-87d2-b5a7928dd506]\nCurrent Committed Offsets: {}\nCurrent Available Offsets: {}\n\nCurrent State: INITIALIZING\nThread State: RUNNABLE"
+     ]
+    }
+   ],
    "source": [
     "ds_locations_windowed = windowedSpeeds \\\n",
     "  .selectExpr(\"CAST(key AS STRING)\", \"CAST(value AS STRING)\") \\\n",
@@ -262,6 +388,13 @@
     "except KeyboardInterrupt:\n",
     "    print(\"STOPPING STREAMING DATA\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -280,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
