--- a/dsc650/assignments/assignment09/Assignment 9.3.ipynb
+++ b/dsc650/assignments/assignment09/Assignment 9.3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap_servers': ['kafka.kafka.svc.cluster.local:9092'],\n",
+       " 'first_name': 'Barbara',\n",
+       " 'last_name': 'Payne',\n",
+       " 'client_id': 'PayneBarbara',\n",
+       " 'topic_prefix': 'PayneBarbara',\n",
+       " 'locations_topic': 'PayneBarbara-locations',\n",
+       " 'accelerations_topic': 'PayneBarbara-accelerations',\n",
+       " 'joined_topic': 'PayneBarbara-joined'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "config = dict(\n",
     "    bootstrap_servers=['kafka.kafka.svc.cluster.local:9092'],\n",
-    "    first_name='John',\n",
-    "    last_name='Doe'\n",
+    "    first_name='Barbara',\n",
+    "    last_name='Payne'\n",
     ")\n",
     "\n",
     "config['client_id'] = '{}{}'.format(\n",
@@ -89,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created topic \"PayneBarbara-joined\"\n"
+     ]
+    }
+   ],
    "source": [
     "def create_kafka_topic(topic_name, config=config, num_partitions=1, replication_factor=1):\n",
     "    bootstrap_servers = config['bootstrap_servers']\n",
@@ -129,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +172,12 @@
     "  .load()\n",
     "\n",
     "## TODO: Add code to create the df_accelerations dataframe\n",
-    "df_accelerations = ''"
+    "df_accelerations = df_locations = spark \\\n",
+    "  .readStream \\\n",
+    "  .format(\"kafka\") \\\n",
+    "  .option(\"kafka.bootstrap.servers\", \"kafka.kafka.svc.cluster.local:9092\") \\\n",
+    "  .option(\"subscribe\", config['accelerations_topic']) \\\n",
+    "  .load()"
    ]
   },
   {
@@ -158,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,9 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[acceleration_timestamp: timestamp, acceleration_ride_id: string, x: double, y: double, z: double]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "locationsWithWatermark = df_locations \\\n",
     "  .select(\n",
@@ -225,7 +267,21 @@
     "  ) \\\n",
     " .withWatermark('location_timestamp', \"2 seconds\")\n",
     "\n",
-    "accelerationsWithWatermark = ''"
+    "accelerationsWithWatermark = df_accelerations \\\n",
+    "  .select(\n",
+    "    col('timestamp').alias('acceleration_timestamp'), \n",
+    "    udf_parse_acceleration(df_accelerations['value']).alias('json_value')\n",
+    "   ) \\\n",
+    "  .select(\n",
+    "    col('acceleration_timestamp'), \n",
+    "    col('json_value.ride_id').alias('acceleration_ride_id'),\n",
+    "    col('json_value.x'),\n",
+    "    col('json_value.y'),\n",
+    "    col('json_value.z')\n",
+    "  ) \\\n",
+    " .withWatermark('acceleration_timestamp', \"2 seconds\")\n",
+    "\n",
+    "accelerationsWithWatermark"
    ]
   },
   {
@@ -239,11 +295,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[location_timestamp: timestamp, location_ride_id: string, speed: double, latitude: double, longitude: double, geohash: string, accuracy: double, acceleration_timestamp: timestamp, acceleration_ride_id: string, x: double, y: double, z: double]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_joined = ''\n",
+    "df_joined = locationsWithWatermark.join(\n",
+    "accelerationsWithWatermark,\n",
+    "expr(\"location_ride_id = acceleration_ride_id\"))\n",
+    "df_joined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[ride_id: string, location_timestamp: timestamp, speed: double, latitude: double, longitude: double, geohash: string, accuracy: double, acceleration_timestamp: timestamp, x: double, y: double, z: double]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_joined = df_joined.select(\n",
+    "    col('location_ride_id').alias('ride_id'),\n",
+    "    col('location_timestamp'),\n",
+    "    col('speed'),\n",
+    "    col('latitude'),\n",
+    "    col('longitude'),\n",
+    "    col('geohash'),\n",
+    "    col('accuracy'),\n",
+    "    col('acceleration_timestamp'),\n",
+    "    col('x'),\n",
+    "    col('y'),\n",
+    "    col('z')\n",
+    ")\n",
+    "\n",
     "df_joined"
    ]
   },
@@ -256,9 +360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "StreamingQueryException",
+     "evalue": "org/apache/spark/sql/internal/connector/SupportsStreamingUpdate\n=== Streaming Query ===\nIdentifier: [id = 218fa38c-8d45-445e-a41a-e7117705b9f4, runId = 02f8c7b1-fc9f-4cf0-8de2-9fabc5fcdbb8]\nCurrent Committed Offsets: {}\nCurrent Available Offsets: {}\n\nCurrent State: INITIALIZING\nThread State: RUNNABLE",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStreamingQueryException\u001b[0m                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-72756735dc4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mds_joined\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mawaitTermination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"STOPPING STREAMING DATA\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.8/site-packages/pyspark/sql/streaming.py\u001b[0m in \u001b[0;36mawaitTermination\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m     99\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jsq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mawaitTermination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jsq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mawaitTermination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.8/site-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1302\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1303\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1304\u001b[0;31m         return_value = get_return_value(\n\u001b[0m\u001b[1;32m   1305\u001b[0m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[1;32m   1306\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.8/site-packages/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    115\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mconverted\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mStreamingQueryException\u001b[0m: org/apache/spark/sql/internal/connector/SupportsStreamingUpdate\n=== Streaming Query ===\nIdentifier: [id = 218fa38c-8d45-445e-a41a-e7117705b9f4, runId = 02f8c7b1-fc9f-4cf0-8de2-9fabc5fcdbb8]\nCurrent Committed Offsets: {}\nCurrent Available Offsets: {}\n\nCurrent State: INITIALIZING\nThread State: RUNNABLE"
+     ]
+    }
+   ],
    "source": [
     "ds_joined = df_joined \\\n",
     "  .withColumn(\n",
@@ -286,6 +405,13 @@
     "except KeyboardInterrupt:\n",
     "    print(\"STOPPING STREAMING DATA\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -304,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
